--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-              Hackerspace Brussels/Whitespace Ghent
+              Hackerspace Brussels/Hackerspace Ghent
                             presents
                  _           _                                _       
  _ __  _ __ ___ (_) ___  ___| |_   _ __   __ _ _ __ ___   ___| | __ _ 
